# rust-snake

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.fleet/: settings.json
src/: game.rs  lib.rs  world.rs
src/game/: position.rs  snake.rs  window.rs  world.rs
web/: .gitignore  package.json
web/src/: App.tsx  index.tsx
web/src/keyboard-interface/: keyboard-interface.tsx
web/src/keyboard-interface/keyboard-provider/: keyboard-provider.tsx
web/src/snake-game/: snake-game.module.scss  snake-game.tsx
