[package]
name = "rust-snake"
version = "0.1.0"
edition = "2021"

[lib]
name = "snakelib"
crate-type = ["cdylib"]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.188" , features = ["derive"] }
serde-wasm-bindgen = "0.6.0"
wasm-bindgen = "0.2.86"
wee_alloc = "0.4.5"
